--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/02.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/02.md
@@ -583,35 +583,28 @@ win by unsophisticated arguments. He attempteth victory.
 
 
 
-Hence, it is meet that Lakshmanāchārya' should incarnate in order to overthrow those Samanadhikarana-rivals, of the Maya" school, championed by a worldimposing Sankara, Meghanāda'-like,those doers of dark deeds, perpetually 
-Double meaning in 1 to 5:- 
-Lakshmana as Ramanuja ( Rama's brother) as against Indrajit, and Lakshmana (Rāmānuja) as against the Illusionist Sankara etc. 
-Samanadhikarana Equal and unequal battle in one case; one substance by many 
-attributes, in the other. 
-1. Jugglery or sorcery in one case; Illusion 
-doctrine in the other. 
-1. 
-Indrajit (Son of Ravana): Meghanada (thunder- 
-voiced); 
-1. Deeds under cover of darkness in one case 
-nefarious deeds in the other. 
-158 
-spotted 'natures, the Brahma-Mimàmsins after (the pattern of) Kali. 
-The Nitya-mukta theory of those who can only compare with the monistic Paundraka" deserve but eternal silence. 
-Forsooth :- 
-1.  The man who essayeth to invent a (new or) non-existent Mukti for an ever-Mukta characterless essence (Soul or Brahman) may as well attempt to invent a new taste for the honey of a dreamflower. 
-Judge (then) this Subhaga-bhikshuka 
-1. Double meaning:-Brahmana pests in one case; misinterpretation of Brahma-Sutras in the other. 2. For the monists who assert identity with Brahman, there is no liberation at all, for it is ever-existent. 
-2. An Asura named Paundraka. pretending identification with Krishna, imitated him. The pretender was eventually killed by Krishna. 4. सुभगाभिक्षुकन्याय - The maxim referred to here is the attitude of that mother-in-law, who, not approving of her daughter-in-law's refusal of 
-159 
-method of these Ràhu-mimàmsakas', kin to Rakshasas. For, having themselves discarded Vedanta, they traduce others (aliens), while vilifying themselves (so-called) Vedantius. 
-Verily do we blush to try conclusions with these silly-talking folk, and feel as the person, who, when advising a dolt to have no Stage-fright" (Sabhākampa), would (be silly enough to) himself blubber "have no "frage-stright" (Bhasà-panka). 
+
+
+ 
+
+Judge (then) this Subhaga-bhikshuka method of these Ràhu-mimàmsakas, kin to Rakshasas .  
+
+(1. Trunkless head (as Rahu is) as opposed to trunk or Ketu or the Kabandha-minimsakas), Mayāvadins:  
+मायिन:पूर्वोत्तरमीमांसयोरेकावयवित्वेऽपि  
+वेद-शिरो-भाग-विचार-रूपोत्तर-मीमांसामात्राङ्गीकारात्)
+
+For, having themselves discarded Vedanta, they traduce others (aliens), while vilifying themselves (so-called) Vedantins. 
+
+(सुभगाभिक्षुकन्याय - The maxim referred to here is the attitude of that mother-in-law, who, not approving of her daughter-in-law's refusal of [[159]] alms to a beggar, would call him back, only to tell him herself that she cannot on any account give him alms; i.e., the right of refusal was an usurpation by the daughter-in-law. Hence the application of this maxim here is thus: -The Bauddhas reject the Vedanta but the Advaitins call in the Vedanta to their doors again only to say: "We have have the right to reject you and not the Bauddhas." 
+)
+
+Verily do we blush to try conclusions with these silly-talking folk,  
+and feel as the person, who, when advising a dolt to have no Stage-fright" (Sabhākampa), would (be silly enough to) himself blubber "have no "frage-stright" (Bhasà-panka). 
 The three-world-saving Srutis them- 
-alms to a beggar. would call him back. only to tell him herself that she cannot on any account give him alms; i.e., the right of refusal was an usurpation by the daughter-in-law. Hence the application of this maxim here is thus: -The Bauddhas reject the Vedanta but the Advaitins call in the Vedanta to their doors again only to Ile have the right to reject you and not the Bauddhas." 
-Say! 
-1. Trunkless head (as Rahu is) as opposed to two 
-trunk or Ketu or the Kabandha-minimsakas). 
-Mayāvadins:मायिन:पूर्वोत्तरमीमांसयोरे कावयवि त्वंऽपि वेदशिरोभागविचाररूपोत्तरमीमांसामावाङ्गीकारात 
+
+
+
+ 
 160 
 selves refute them best. The fourfold means of Moksha, these fourth-yuga Sanyāsins-pirates of the triune Truism, Vedic Chid-Achid-Isvara'-assert, the wise mockingly understand antinomically thus:- 
 (1) For (Nityànitya-vastu-vivēka) - Discrimination as 'to what is Eternal and what is not Eternal> <<(Tatvà tatva-vicharabhava) -Want of discrimination as to what is 
