--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/01.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/01.md
@@ -131,7 +131,7 @@ Words fail me to adequately convey the singular significance of this Drama. Coun
 1. Supreme Spirit (God.) 
 2. Grand Illusion. 
 3. Embodied Soul. 
-4. Protecting the virtuous and destroying the vicious &c. [vide, Bhagavad-gità: paritranaya &c.] 
+4. Protecting the virtuous and destroying the vicious &c. [vide, Bhagavad-gitā: paritranaya &c.] 
 12 
 janya,' adorning the lotus hand of Vishnu ! 
 1.  Let those ordinary rubies of little lustre which deceive the simple world remain in the mansions of the rich; of what avail are these ?-think of this for a while; could any even among the oldest rubies stand comparison, with that ruby which illumineth the Mole Srivatsa Vishnu's breast and which acteth as a mirror to Sri Lakshmi's sports? 
