--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/02.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/02.md
@@ -577,93 +577,15 @@ win by unsophisticated arguments. He attempteth victory.
 
 ...
 
-
-
-
-
-
-
-
-
  
 
-Judge (then) this Subhaga-bhikshuka method of these Ràhu-mimàmsakas, kin to Rakshasas .  
 
-(1. Trunkless head (as Rahu is) as opposed to trunk or Ketu or the Kabandha-minimsakas), Mayāvadins:  
-मायिन:पूर्वोत्तरमीमांसयोरेकावयवित्वेऽपि  
-वेद-शिरो-भाग-विचार-रूपोत्तर-मीमांसामात्राङ्गीकारात्)
-
-For, having themselves discarded Vedanta, they traduce others (aliens), while vilifying themselves (so-called) Vedantins. 
-
-(सुभगाभिक्षुकन्याय - The maxim referred to here is the attitude of that mother-in-law, who, not approving of her daughter-in-law's refusal of [[159]] alms to a beggar, would call him back, only to tell him herself that she cannot on any account give him alms; i.e., the right of refusal was an usurpation by the daughter-in-law. Hence the application of this maxim here is thus: -The Bauddhas reject the Vedanta but the Advaitins call in the Vedanta to their doors again only to say: "We have have the right to reject you and not the Bauddhas." 
-)
-
-Verily do we blush to try conclusions with these silly-talking folk,  
-and feel as the person, who, when advising a dolt to have no Stage-fright" (Sabhākampa), would (be silly enough to) himself blubber "have no "frage-stright" (Bhasà-panka). 
-The three-world-saving Srutis them- 
-
-
-
- 
-160 
-selves refute them best. The fourfold means of Moksha, these fourth-yuga Sanyāsins-pirates of the triune Truism, Vedic Chid-Achid-Isvara'-assert, the wise mockingly understand antinomically thus:- 
-(1) For (Nityànitya-vastu-vivēka) - Discrimination as 'to what is Eternal and what is not Eternal> <<(Tatvà tatva-vicharabhava) -Want of discrimination as to what is 
-Truth and what is not Truth. 
-(2) For (Sama-damādi-sadhana sampat)== The good means viz. control of senses, internal, external, etc.><(Ràga-dveshadi sadhana sampat)=The means of love, hate, etc. 
-(3) For (Ihàmutra-phala-bhoga-virāga)= Abandonment of the pleasures of this and the world to come> <(Laukika-vaidikakarmānushthàna-vaimukhya)Abjuration of doing good works, temporal and spiritual. 
-1. The Visishtadvaitic thesis of the Vedanta viz. Soul, Non-soul and God together constituting One Substance.161 
-(4) For (Mamukshutva)-Love of Liberation><(Bubhukshutva)= Love of lust. 
-Guru.--Good pupi!! What good is it barping on 
-this ? 
-Pupil. Holy sire! (Then) I shall rebut the 
-other variants (of this Advaitic doctrine.) 
-1.  If Bhaskara and Yadava-prakasa could be adepts in determining the real position of the Vedanta, what affront is imputable to the other protagonists' (Jainas etc,) experts in expounding self-contradictions P 
-It is for this reason then we hear that in the manner the Absolute Brahmanupholders (Sankara etc.) are held to be pseudo-Bauddhas, these (Bhaskara and Yadavaj also are held to be Jaina'-smacking Vedantins. 
-1. Buddha, Jinā, etc., 
-2 
-phoiders of Brahman divorced of every atribute -or the subjective Idealists. 
-3 प्रच्छन्नबौद्धाः 
-4 
-कस्यापि वस्तुनः एकस्यानङ्गीकारात् जैनगन्धित्वं 
-s. 11 
-162 
-But this is the quintessence of all the Upanishads, (thus) : 
-:- 
-1.  The Bheda'-texts proclaim relative differences amongst the Verities', and the holy Aikya-texts are significant by their relative Unity. And to support both these senses, other scriptural texts declare the Verity (to be) the Cosmos-Immanent Over-Lord-the Lakshmi-Lord. 
-King.-0, Brahmana best! 
-1.  Wise thou art, that by thee, this (Kali-)age, vitiated as it is by the (threefold) 
-2. Bheda Duality Dvaita: 
-प्रेरितारं च मत्वा &c. 
-1. Verities or Categories are 
-3 
-(a) Matter-non-soul. 
-(b) Soul, and 
-(c) God, all the three existing as a Unity-inDifference, ie., iu Visishtadvaitic Unison, or in indiscerptible relation together. 
-Aikya-MonisticAdvaitaICE ZEL 
-1. : faga (Ghataka Sruti)Reconciling or 
-harmonising texts. 
-163 
-heretics,-Tatva1-lost, 
-Vritta'-lost, and 
-both-lost",-hath into Krita-nge been 
-transmuted. 
-Pupil. Great king! All that, by the grace 
-of this Acharya. 
+Pupil. Great king! All that, by the grace of this Acharya. 
 and 
+
 1.  What by Kānāda-methods, Kapila-designed drama, what by Kumārila's jargons and Guru-tied knots, what (again) by Tathagata-rigmaroles and others' ravings, was the world imposed upon, hath all now, by Yatindra's deliverances, been restored to sense. 
 Further :- 
-1.  The verdicts of the Mani-lord (= Rāmānuja) which act as the moon-light 
-2. Those who have missed the true perception of 
-Verity (Reality) Bhatta etc. 
-1. 
-Those who have missed the true virtuous practice 
-or conduct (Achara) Sankara, etc. 
-3 
-Both (1) and (2) absent z., neither perceivers of truth nor knowers of good conduct 
-Charvaka. 
-etc. 
-164 
-to the (blue) lotus'-garden of Vaikunthalove, provoke (in all) yearning for deathless deliverance. They are like the sun risen, piercing into the eyes of those owls, viz., the synod that revels in the night of its own school. 
+1.  The verdicts of the Mani-lord (= Rāmānuja) which act as the moon-light [[164]] to the (blue) lotus'-garden of Vaikunthalove, provoke (in all) yearning for deathless deliverance. They are like the sun risen, piercing into the eyes of those owls, viz., the synod that revels in the night of its own school. 
 Senapati. My lord! 
 1.  Master of speech, veteran of worddebate, victor over factions, this (Arya) meriteth honors. 
 Pupil.-General ! 
