--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/03.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/03.md
@@ -238,7 +238,7 @@ Unaccountably then to assert that even the wise should indulge in fear till actu
 Caste, Order, etc. 
 No such fear has any foundation. 
 The implication is that everything will operate as the cause of fear unless perceived properly. ७. कालेष्वपि च सर्वेषु दिक्षु सर्वासु चाच्युत 
-शरीरे च गतौ चापि वर्त्तते मे महत्भयम् ॥ [Jitantà.]191 
+शरीरे च गतौ चापि वर्त्तते मे महत्भयम् ॥ [Jitantā.]191 
 it be commission of prohibited duties and omission of ordained duties, whether it 
 be 'the body etc,-these though the means to achieve his longed-for object? 
 Sumati.If indeed everything be the source of fear, then how shall Yoga, achievable only in the absence of fear, become successfit ? 
@@ -316,7 +316,7 @@ Viveka. With concealed contempt).
 Man! Thou art acceptable to us as well; hence read the message in all privacy. 
 Messenger. As thy Majesty commands. 
 (Reads the message humbly). 
-1.  Thus (runneth) the mandate of Mahàmôha, so esteemed by Kàma and others. It is also not obnoxious to the residents of Svarga, who are repugnant' to the decline of Samsāra. 
+1.  Thus (runneth) the mandate of Mahāmôha, so esteemed by Kāma and others. It is also not obnoxious to the residents of Svarga, who are repugnant' to the decline of Samsāra. 
 Viveka.-(Interrupting and smiling) Queen! Mark that we are treated as objects of wicked Mahāmôha's commands ! But just to know the enemy's mind, we should hear the rest of the message. Well then, messenger! proceed. 
 1. The idea here is that the Devas resident in Svarga fear that the Samsara will decline, if Vivēka is given free scope for the spread of Vairagya, which would eventually minimise their own enjoyment. 
 199 
@@ -364,7 +364,7 @@ my master Mahāmóha doth enjoin on us these errands.
 (Aloud) Great king! Transgress not the adage1 "Abandon the individual to save the family". 
 etc; 
 (Thus saying exit.) 
-Sumati.-Aryaputra! If Jiva, who is ready to attain Móksha, is subdued by Kama, Kródha, Lóbha, Mada, Matsara', etc. incited by Mahàmóha, all thy efforts so far prove futile. 
+Sumati.-Aryaputra! If Jiva, who is ready to attain Móksha, is subdued by Kama, Kródha, Lóbha, Mada, Matsara', etc. incited by Mahāmóha, all thy efforts so far prove futile. 
 Viveka. Queen mine! Think not so. But bid 
 only for our good. 
 1. 
