--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/05.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/05.md
@@ -29,7 +29,7 @@ the daily midday worship.
 2. Full-moon days when Sthālipaka is performed.251 
 Much I esteem 
 my co-partner in life. thee, as thou dost maintain my Brahmanism, thou-my sacrificial wife-the lawfully wedded wife of a great Srôtriya'. Always thou observest the Dvādasi2 vow, after sumptuously feeding me, who is ever pinched by hunger and thirst, even on Harivasaras days, privately and well thou showest thine vow to others, by ostensibly wandering from door to door under the pretext of gathering materials therefor. I shall now however unfold thee a secret. 
-There now exist some Asuras, who have hid goodbye to all Dharmas, putting on the garb of ascetics, maintaining arguments tending to Māyà, seeming, as they 
+There now exist some Asuras, who have hid goodbye to all Dharmas, putting on the garb of ascetics, maintaining arguments tending to Māyā, seeming, as they 
 1. One well-versed in the Vēdas. 
 2. 
 3. 
@@ -46,13 +46,13 @@ Queen Durmati hath, requested me to practise some witchcraft on Vivēka, the des
 "Well, boy Dambha! Thou who spoilest all the Dharmas of the universe 
 shalt exterminate Viveka". 
 Averse as I am ever to desires, out of extreme civility, believing in the sages' dictum-"There is no sin in exorcising 
-1. Ravāna carried away Sità in the guise of au 
+1. Ravāna carried away Sitā in the guise of au 
 ascetic from the Panchavati forest. 
 1. 
 Arjuna carried away Subhadra (sister of Lord 
 Krishna) in the guise of an ascetic. 
 253 
-the six" I have now undertaken the vow to gratify an unknown deity. Fetch me therefore Parijata flowers and fruits, collected by Lokapala's Purohits', after their bathing in the waters of the celestial Gangà. 
+the six" I have now undertaken the vow to gratify an unknown deity. Fetch me therefore Parijata flowers and fruits, collected by Lokapala's Purohits', after their bathing in the waters of the celestial Gangā. 
 Kunana. - Fie ! Fie !! Alas! How witchcraft could be practised against Vivēka, the master of the quintessence of all the Sāstras, well protected by his cabinet ministers Sama, Dama, and others? They say that witchcraft practised in such a case recoileth on, and bringeth evil to, the practiser himself. 
 Dambha.-Ab, silly Brahmani! What speakest 
 1. अनिदो गरदथैव शस्त्रपाणिर्धनापहः । 
@@ -93,7 +93,7 @@ Dambha. Pah, simpleton! To me who knoweth everything, who is the initiator? All 
 1. A particular form of sorcery 
 256 
 Albeit, I have taken one by the name of Garva, the disdainer of all worthy people, 
-and one in the liking of all, who is the propounder of Mahàmôha's cult, as a mere witness in this affair. Awaiting his arrival, I sit with all materials ready on this seat of Kusā grass, spread by the sages seven, in this siddha hermitage, purified nine times over. 
+and one in the liking of all, who is the propounder of Mahāmôha's cult, as a mere witness in this affair. Awaiting his arrival, I sit with all materials ready on this seat of Kusā grass, spread by the sages seven, in this siddha hermitage, purified nine times over. 
 Kuhana.Well done. The success of the enter- 
 prise shall equally be fruitful. 
 Dambha. (Gesturing omen). My guardian angel Kuhanā! My right eye throbbeth and this surely doth indicate the encounter with a friend-Looking in front). 
@@ -173,9 +173,9 @@ These countries, infested by barbarians, who are no better than goats, beasts an
 4 
 265 
 acting as ministers to foolish kings. 
-(Looking to the North). Yonder some one cometh, facing the South, either from Kasmira, or Jalandhara. I shall just ascertain from him how my wives fare? Ah! good Brahmana! "Knowest thou the present plight of my wives Irshà, and Asūyā, who have set out to go round the Mēru mountain, under the leading of Durmati ?" 
+(Looking to the North). Yonder some one cometh, facing the South, either from Kasmira, or Jalandhara. I shall just ascertain from him how my wives fare? Ah! good Brahmana! "Knowest thou the present plight of my wives Irshā, and Asūyā, who have set out to go round the Mēru mountain, under the leading of Durmati ?" 
 (Then listening). 
-"What! Savest thou that they are imprisoned in the depths of Nivritti Dharma, by Sumati's deceitful companions Maitri', Karuna, Mudità," and Upēkshā'" ? (With anger). Ah, this devil of a sinful Brahmana speaketh untruth. Ah thou mischievous bastard Srôtriga! Thou Brahma-Rakshasa! 
+"What! Savest thou that they are imprisoned in the depths of Nivritti Dharma, by Sumati's deceitful companions Maitri', Karuna, Muditā," and Upēkshā'" ? (With anger). Ah, this devil of a sinful Brahmana speaketh untruth. Ah thou mischievous bastard Srôtriga! Thou Brahma-Rakshasa! 
 How could this mishap befall my 
 Friendship towards the virtuous. Pity towards the miserable. 
 1. Joy towards the "happy. 
@@ -183,11 +183,11 @@ Indifference towards the sinners.
 266 
 chaste wives, who, though enticing all the world, never for a moment lack in their sole devotion for me! (Musing). Already known to me is this wandering wayfarer, used as a messenger to different climes by the hunting chiefs of the mountainous tribes. 
 (Mocking). Alas! Several are the vices converging in one centre, through singularities of places and times! 
-1.  For, his mother-in-law followeth Digambara's doctrine; Sangatas2 are his relatives; his mother and father are the votaries of Pasupati ;3 Vibhàshika' is his teacher; his wife stands by Sankhya-yoga; Chārvāka's disciple is his friend: himself, known as Mithyachāra, fonleth the Vedas. 
+1.  For, his mother-in-law followeth Digambara's doctrine; Sangatas2 are his relatives; his mother and father are the votaries of Pasupati ;3 Vibhāshika' is his teacher; his wife stands by Sankhya-yoga; Chārvāka's disciple is his friend: himself, known as Mithyachāra, fonleth the Vedas. 
 Therefore this hunter's spy, Mithyachara, ever habituated to utter lies, is unfit to 
 1. See n. 1, p. 141. 2. Buddhists, such as Sautrāntika, Yogachara who hold that the whole external world is unreal, and as the Mayavadins also believe similarly, the appropriateness of the relationship is evident. 3. See n. 2, p. 144. 4. See n. 1, p. 137. 5. Follower of false practices. 
 267 
-be conversed with by high souls like myself; to wipe off the sin of having seen him, I shall just see the sun or myself. (Walking quickly). Alas! Are not yon countries in the midland regions between the great rivers the Ganga and the Yamunà? Who is here, though gifted with boons by Brahma and Siva, that will understand my doctrine, full of diverse theories which would baffle even those who profess the knowledge of Brihaspati? Much less he who could controvert, criticise or support my doctrine! These great cities are topsyturvied by the barbarian kings of the West, invited by our sovereign Mahàmôha to shut off the doors to Móksha. Here moveth about some Dāmbhika-Chakravarti?! 
+be conversed with by high souls like myself; to wipe off the sin of having seen him, I shall just see the sun or myself. (Walking quickly). Alas! Are not yon countries in the midland regions between the great rivers the Ganga and the Yamunā? Who is here, though gifted with boons by Brahma and Siva, that will understand my doctrine, full of diverse theories which would baffle even those who profess the knowledge of Brihaspati? Much less he who could controvert, criticise or support my doctrine! These great cities are topsyturvied by the barbarian kings of the West, invited by our sovereign Mahāmôha to shut off the doors to Móksha. Here moveth about some Dāmbhika-Chakravarti?! 
 1.  These, though they will never go abegging and will scorn even voluntary 
 2. The idea is that the sanctity of his own self is 
 no less efficacious to eradicate sin than the 
@@ -274,7 +274,7 @@ Mahā-
 beset by men of this 
 moha's mission cannot but prove a success. Still, con place between the confluence of the White" and the Black' rivers seemeth somewhat to be the resort of wisdom". 
 For :- 
-1.  In one portion (of this hermitage) there is a mound of mrittikà, 
+1.  In one portion (of this hermitage) there is a mound of mrittikā, 
 resembling sand-heaps of the ocean of achāra; in 
 1. काषाय. 
 2. दण्ड. 
@@ -359,7 +359,7 @@ Darpa.--I shall try to accommodate thy wish in the matter, but let that alone fo
 Asuya. I also fancy thee as having been seen 
 by me before. But never mind this controversy now. I wish to prescribe some expiatory rite for thee, who simply wearest white clothes and standest like a lamppost, without prostrating to my noble self, whose feet is worshipped frequently at every ceremony, by even the foremost of ascetics, who take me for their superior 
 284 
-in àchāra. I will thus make thee holy. 
+in āchāra. I will thus make thee holy. 
 Darpa.-(Aside). This votary of the ascetic order 
 prattleth some nonsense. 
 Be it so. We 
@@ -459,9 +459,9 @@ Darpa. Never did a heavenly voice prove untrue. I owe many apologies to thee, my
 Dambba. Indeed I too have offended thee. 
 (Dambha and Darpa lift their hands in salutation and speak affectionate words) 
 294 
-(Asūya and Kuhanà embrace each other tightly). 
+(Asūya and Kuhanā embrace each other tightly). 
 Dambha & Darpa.-As we wished, so have we met here, by chance. Now we should be with our king in time. 
-(Then enter Mahàmôha and Durmati). 
+(Then enter Mahāmôha and Durmati). 
 Mabamoha.(Musing). My love! 
 We, having taken the vow to exterminate the most reckless ruiner of our clan, Vivēka, have just heard that Kāma Krodha and others, sent by us to spoil Jiva's Yoga, have retreated, with their squadron, all broken up like a dam made of sand, seized with an unexpected panic, protecting each other, on the analogy of the maxim of the Lion and the Forest,' and that they, ashamed to behold our face, 
 1. सिंहवनगुप्तिन्याय: - The lion cannot exist without the forest, for hunters will bave easy access and will make short work of the lion; similarly the forest cannot exist without the lion, for, then, the forest in the absence of the lion will be transformed into cultivable land. 
@@ -624,7 +624,7 @@ Durmati's Lord!
 It is said "Truth shineth in kings." 1 shall therefore inform thy Majesty, what I saw, though it may be disliking to me. 
 309 
 For, I know too well the present condition of Kāma and Lôbha. 
-1.  Immersed though men are in the Ocean of myriad lusts, though the season of Spring reigneth, though the Malayà breezes blow, Kāma, abashed, as it were, at reverses', due to his slight remissness (in attacking the Jiva), it seems, hath fallen into slumber, and never toucheth his shafts! 
+1.  Immersed though men are in the Ocean of myriad lusts, though the season of Spring reigneth, though the Malayā breezes blow, Kāma, abashed, as it were, at reverses', due to his slight remissness (in attacking the Jiva), it seems, hath fallen into slumber, and never toucheth his shafts! 
 What need then to speak of the other (Lobha) ? 
 Listen :- 
 1.  What hold can Lobha, an object of praise by misers, obtain in a Jiva, beguiled as he is by Viveka, and who neglects his very body!? 
@@ -683,13 +683,13 @@ Durmati. -Friend Durvasana! Come here.
 Durvasana. Here I am, awaiting the king's and 
 the queen's mandates, 
 Mahamoha. My good Durvasana! Proclaim under my command to my different Secretaries, expert in all learning and writing:- 
-Be it known to all that the King of Kings and Suzerain Lord, the great Mahàmoha with Queen Durmati commandeth :- 
+Be it known to all that the King of Kings and Suzerain Lord, the great Mahāmoha with Queen Durmati commandeth :- 
 315 
 "Let it be written that Mahamôha hath made a free grant of the famous metropolises seven, known all the worlds over, as the seven Mukti-kshetras the great islands seven, the oceans seven, to his ministers seven, Kama, Krodha, Lôbba, Mada', Dambha, Matsarya and Stambha1." 
 1.  “ 
 8 
 And:- 
-Leaving now Indra and the other Devas, who retire from their high estates at each successive Manvantara", and who tremble with fear at the very mention of my name, all this universe shall interpret the use of the words --Nama, Seast, Srāha, Sradha, uttered even casually, as appertaining to myself-Mahàmôha." 
+Leaving now Indra and the other Devas, who retire from their high estates at each successive Manvantara", and who tremble with fear at the very mention of my name, all this universe shall interpret the use of the words --Nama, Seast, Srāha, Sradha, uttered even casually, as appertaining to myself-Mahāmôha." 
 Shrices of Salvation. 
 1. Jealousy. 
 The period or age of a Manu. 
